--- a/Ex01/style.css
+++ b/Ex01/style.css
@@ -12,15 +12,16 @@ html,
 body {
     height: 100%;
     width: 100%;
-    background-color: #2A2A2A;
+    background-color: #e94242;
     color: #f3f3f3;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    
 }
 
 header {
-    height: 70px;
+    height: 90px;
     width: 100%;
     background-color: #2A2A2A;
     display: flex;
@@ -34,6 +35,30 @@ header {
     font-size: 20px;
     box-sizing: border-box;
     padding: 0 40px;
+    position: relative; 
+}
+
+header h1 {
+    flex-grow: 1; 
+    text-align: center; 
+}
+
+header a {
+    position: absolute;
+    top: 50%;
+    right: 20px; 
+    transform: translateY(-50%); 
+    color: #F3F3F3;
+    text-decoration: none;
+    transition: 0.2s;
+}
+
+header a:hover{
+color: chocolate;
+transition: 0.2s;
+
+
+
 }
 
 #inicio {
@@ -42,7 +67,7 @@ header {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("img/9070324cdfc07c68d60eed0c39e77573.gif");
+    background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -51,41 +76,45 @@ header {
     width: 100%;
     padding-top: 70px;
     overflow-y: auto;
-    }
+}
 
-#lista {
+input[type="text"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+  }
+  
+  .botoes {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    padding: 10px;
-    width: 100%;
-    max-width: 1200px;
-}
+    gap: 10px;
+    margin-bottom: 15px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 10px;
+    border: none;
+    background-color: #f26d00;
+    color: #fff;
+    cursor: pointer;
+    transition: 0.3s;
+    font-family: 'Comic Relief', cursive;
+  }
+  
+  button:hover {
+    background-color: #fff;
+    color: #f26d00;
+    border: 1px solid #f26d00;
+  }
 
-.card-container {
-    width: 300px;
-    height: 230px;
-    perspective: 1000px;
-}
-
-.card-flip {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-}
-
-.card-container:hover .card-flip {
-    transform: rotateY(180deg);
-}
-
-.card-front,
-.card-back {
+  #fundo{
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 300px;
     border-radius: 10px;
     border: 2px solid #2A2A2A;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -98,38 +127,5 @@ header {
     color: #2A2A2A;
     text-align: center;
     flex-direction: column;
-}
 
-.card-front h3 {
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.card-back {
-    transform: rotateY(180deg);
-}
-
-.card-text {
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-
-button {
-    padding: 10px 20px;
-    font-size: 15px;
-    border-radius: 10px;
-    border: none;
-    background-color: #2A2A2A;
-    color: #F3F3F3;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    width: 180px;
-    height: 70px;
-    text-align: center;
-}
-
-button:hover {
-    background-color: #F3F3F3;
-    color: #2A2A2A;
-    border: 1px solid #2A2A2A;
-}
+  }
