--- a/Ex04/style.css
+++ b/Ex04/style.css
@@ -12,7 +12,7 @@ html,
 body {
     height: 100%;
     width: 100%;
-    background-color: #e94242;
+    background-color: #2A2A2A;
     color: #f3f3f3;
     display: flex;
     flex-direction: column;
@@ -63,7 +63,7 @@ header a:hover {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
+    background-image: url("../img/calculator-1920-x-1080-background-6qd8x3jr84v3hb2k.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
