--- a/Ex08/style.css
+++ b/Ex08/style.css
@@ -12,7 +12,7 @@ html,
 body {
     height: 100%;
     width: 100%;
-    background-color: #e94242;
+    background-color: #2A2A2A;
     color: #f3f3f3;
     display: flex;
     flex-direction: column;
@@ -142,45 +142,54 @@ button:hover {
 
 
 
-@media (max-width: 768px) {
-    header {
-        font-size: 18px;
-        padding: 0 20px;
-    }
-
-    .inputs {
-        max-width: 90%;
-    }
-
-    button {
-        width: 100%;
-        max-width: 250px;
-        height: 50px;
+@media (max-width: 480px) {
+    body {
         font-size: 14px;
     }
 
-    .botoes {
-        flex-direction: column;
-        align-items: center;
+    header {
+        height: 75px;
+        padding: 0 12px;
     }
-}
 
-@media (max-width: 480px) {
     header h1 {
-        font-size: 16px;
+        font-size: 1.1rem;
+    }
+
+    header a {
+        font-size: 0.85rem;
+        right: 10px;
+    }
+
+    #inicio {
+        padding-top: 95px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    #fundo {
+        width: 90%;
+        height: 300px;
+        padding: 12px 10px;
+        font-size: 0.9rem;
+        margin-top: 20px;
     }
 
     input[type="text"] {
+        width: 100%;
         font-size: 14px;
         padding: 8px;
     }
 
-    button {
-        font-size: 14px;
-        height: 45px;
+    .botoes {
+        flex-direction: column;
+        gap: 8px;
     }
 
-    #fundo {
-        padding: 15px;
+    button {
+        font-size: 14px;
+        padding: 10px;
+        width: 100%;
+        height:50px ;
     }
 }
