--- a/Ex11/style.css
+++ b/Ex11/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
+
+
 * {
     font-family: 'Alata', sans-serif;
     letter-spacing: 1px;
@@ -63,7 +65,7 @@ header a:hover {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("../img/contador.jpg");
+    background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -110,6 +112,8 @@ button {
     cursor: pointer;
     transition: 0.3s;
     font-family: 'Comic Relief', cursive;
+    height: 50px;
+    width: 160px;
 }
 
 button:hover {
@@ -121,7 +125,7 @@ button:hover {
 #fundo {
     position: absolute;
     width: 400px;
-    height: 450px;
+    height: auto;
     border-radius: 10px;
     border: 2px solid #2A2A2A;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -136,23 +140,6 @@ button:hover {
     flex-direction: column;
 }
 
-
-#resultado {
-    width: 100%;
-    max-width: 300px;
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #F3F3F3;
-    color: #2A2A2A;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    text-align: left; 
-    white-space: pre-wrap; 
-    font-size: 16px;
-    height: auto;
-    min-height: 100px; 
-    overflow-y: auto; 
-}
 
 @media (max-width: 480px) {
     body {
@@ -181,6 +168,7 @@ button:hover {
 
     #fundo {
         width: 90%;
+        height: 300px;
         padding: 12px 10px;
         font-size: 0.9rem;
         margin-top: 20px;
@@ -201,5 +189,6 @@ button:hover {
         font-size: 14px;
         padding: 10px;
         width: 100%;
+        height:50px ;
     }
 }
