--- a/Ex18/style.css
+++ b/Ex18/style.css
@@ -85,6 +85,24 @@ input[type="text"] {
     box-sizing: border-box;
 }
 
+input[type="email"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+input[type="password"] {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .inputs {
     display: flex;
     flex-direction: column;
@@ -92,6 +110,7 @@ input[type="text"] {
     margin-bottom: 20px;
     width: 100%;
     max-width: 300px;
+    
 }
 
 .botoes {
@@ -112,7 +131,7 @@ button {
     cursor: pointer;
     transition: 0.3s;
     font-family: 'Comic Relief', cursive;
-    height: 50px;
+    height: 60px;
     width: 150px;
 }
 
