--- a/Ex03/style.css
+++ b/Ex03/style.css
@@ -63,7 +63,7 @@ header a:hover {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("../img/calculator-2560-x-1440-background-9idet8pma9adeqd5.jpg");
+  background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
