--- a/Ex02/style.css
+++ b/Ex02/style.css
@@ -63,7 +63,7 @@ header a:hover {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
+    background-image: url("../img/contador.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
