--- a/Ex01/style.css
+++ b/Ex01/style.css
@@ -60,7 +60,7 @@ input[type="text"] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
+    background-image: url("../img/impar.webp");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
