--- a/Ex12/style.css
+++ b/Ex12/style.css
@@ -65,7 +65,7 @@ header a:hover {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    background-image: url("../img/9070324cdfc07c68d60eed0c39e77573.gif");
+    background-image: url("../img/ex12.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -141,8 +141,6 @@ button:hover {
     text-align: center;
     flex-direction: column;
 }
-
-
 
 
 @media (max-width: 480px) {
